overflow fixes

--- a/style.css
+++ b/style.css
@@ -11,18 +11,20 @@
 body {
     margin: 0;
 }
+html{
+    overflow: hidden;
+}
 
 /******************************************************/
 
 /**********************nav*****************************/
-nav {
+.nav-wrapper{
     height: 50px;
     background-color: #2b4162;
     background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* box-shadow: 0 0 10px 10px inset rgba(145, 255, 0, 0.2); */
     z-index: 5;
 }
 
@@ -88,7 +90,11 @@ nav {
     }
 
 }
-.funsies {
+.funsies{
+    position:relative;
+}
+
+.funsies span:nth-child(1){
     position: absolute;
     top: 0;
     left: 0;
